<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2017 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<resources>
    <string name="onstoptask">onStopTask</string>
    <string name="onstarttask">onStartTask</string>
    <string name="defaultparamtext">task params will show up here.</string>
    <string name="schedule_job_button_text">Schedule Job</string>
    <string name="cancel_all_jobs_button_text">Cancel all</string>
    <string name="finish_job_button_text">Finish last task</string>
    <string name="idle_mode_text">Requires device in idle mode.</string>
    <string name="charging_caption">Charging:</string>
    <string name="charging_text">Requires device plugged in.</string>
    <string name="idle_caption">Idle:</string>
    <string name="connectivity">Connectivity:</string>
    <string name="any">Any</string>
    <string name="unmetered">WiFi</string>
    <string name="timing">Timing:</string>
    <string name="delay">Delay:</string>
    <string name="deadline">Deadline:</string>
    <string name="work_duration">Work duration:</string>
    <string name="cancelled_job">Cancelled job %d</string>
    <string name="no_jobs_to_cancel">No jobs to cancel</string>
    <string name="all_jobs_cancelled">All jobs cancelled</string>
    <string name="job_status">Job ID %s %s</string>
    <string name="default_duration_time">2</string>
    <string name="default_delay_time">0</string>
    <string name="default_deadline_time">15</string>
</resources>
